consider review comments